# torch2iron

./: .gitignore  .gitmodules  README.md  goal.md  how-to-fuse-layer-in-IRON.md  legacy-old-plan.md  optimization-plan.md  optimized-attention-plan.md  optimized-weight-lmhead.md  pyproject.toml
scripts/: benchmark_qwen3_batch_decode.sh  build_fast_qwen3_plane_attention_kernel_object.sh  iron_env.sh  profile_qwen3_batch_decode_ops.py  profile_qwen3_batch_decode_ops.sh  run_exported_llama3_inference.sh  run_exported_qwen3_batch_inference.sh  run_exported_qwen3_inference.sh  run_fast_qwen3_attention_current_smoke.sh  run_fast_qwen3_attention_o_projection_residual_smoke.sh  run_fast_qwen3_attention_o_projection_smoke.sh  run_fast_qwen3_kv_plane_write_attention_smoke.sh  run_fast_qwen3_kv_plane_write_smoke.sh  run_fast_qwen3_layer_static_kv_contract_smoke.sh  run_fast_qwen3_layer_static_kv_core_dma_contract_smoke.sh  run_fast_qwen3_layer_static_kv_dual_pair_attention_ingress_contract_smoke.sh  run_fast_qwen3_layer_static_kv_dual_pair_attention_ingress_xrt_smoke.sh  run_fast_qwen3_layer_static_kv_full_two_stage_attention_bounded_contract_smoke.sh  run_fast_qwen3_layer_static_kv_full_two_stage_attention_bounded_xrt_smoke.sh  run_fast_qwen3_layer_static_kv_one_pair_two_stage_attention_bounded_contract_smoke.sh  run_fast_qwen3_layer_static_kv_one_pair_two_stage_attention_bounded_xrt_smoke.sh  run_fast_qwen3_layer_static_kv_one_pair_two_stage_attention_ingress_contract_smoke.sh  run_fast_qwen3_layer_static_kv_one_pair_two_stage_attention_ingress_xrt_smoke.sh  run_fast_qwen3_layer_static_kv_pair_attention_ingress_contract_smoke.sh  run_fast_qwen3_layer_static_kv_pair_core_dma_contract_smoke.sh  run_fast_qwen3_layer_static_kv_quad_pair_attention_bounded_contract_smoke.sh  run_fast_qwen3_layer_static_kv_quad_pair_attention_bounded_xrt_smoke.sh  run_fast_qwen3_layer_static_kv_quad_pair_attention_ingress_contract_smoke.sh  run_fast_qwen3_layer_static_kv_quad_pair_attention_ingress_xrt_smoke.sh  run_fast_qwen3_o_projection_operator_smoke.sh  run_fast_qwen3_o_projection_residual_operator_smoke.sh  run_fast_qwen3_plane_attention_o_projection_residual_smoke.sh  run_fast_qwen3_plane_attention_smoke.sh  run_fast_qwen3_q_current_attention_smoke.sh  run_fast_qwen3_q_current_operator_smoke.sh  run_fast_qwen3_q_current_plane_attention_smoke.sh  run_fast_qwen3_qkv_operator_smoke.sh  (+8 more)
(+238 files in other folders)
