[project]
name = "torch2iron"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "numpy",
    "ml-dtypes",
    "safetensors",
    "tiktoken",
    "jinja2",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"torch2iron.export" = ["templates/*.j2"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
